--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.5</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -75,23 +75,9 @@
 			<version>3.3.1</version>
 		</dependency>  
 
-		<!-- Spring & Struts2 dependencies -->
+		<!-- Spring dependencies -->
 
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-core</artifactId>
-			<version>2.1.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-dojo-plugin</artifactId>
-			<version>2.1.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-spring-plugin</artifactId>
-			<version>2.3.1.2</version>
-		</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework</groupId>
