--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.impetus</groupId>
-	<artifactId>twitample</artifactId>
+	<artifactId>kundera-graph-browser</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -22,6 +22,28 @@
 			<url>http://repository.primefaces.org</url>
 			<layout>default</layout>
 		</repository>
+		<repository>
+			<id>neo4j-release-repository</id>
+			<name>Neo4j Maven 2 release repository</name>
+			<url>http://m2.neo4j.org/releases</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>neo4j-snapshot-repository</id>
+			<name>Neo4j Maven 2 snapshot repository</name>
+			<url>http://m2.neo4j.org/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -34,18 +56,37 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Kundera Dependency -->
+		<!-- Kundera Dependencies -->
+		<dependency>
+			<groupId>com.impetus.core</groupId>
+			<artifactId>kundera-core</artifactId>
+			<version>2.4-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.impetus.client</groupId>
 			<artifactId>kundera-cassandra</artifactId>
-			<version>2.0.7-SNAPSHOT</version>
+			<version>2.4-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.impetus.client</groupId>
-			<artifactId>kundera-mongo</artifactId>
-			<version>2.0.7-SNAPSHOT</version>
+			<artifactId>kundera-neo4j</artifactId>
+			<version>2.4-SNAPSHOT</version>
 		</dependency>
+
+		<!-- Neo4J Libraries -->
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		
+		
+		<!-- Jersey - REST Libraries -->
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.12</version>
+		</dependency>	
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -76,9 +117,6 @@
 		</dependency>  
 
 		<!-- Spring dependencies -->
-
-		
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -140,7 +178,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>twitample</finalName>
+		<finalName>kundera-graph-browser</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -160,7 +198,6 @@
 					</archive>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<groupId>org.jboss.as.plugins</groupId>
 				<artifactId>jboss-as-maven-plugin</artifactId>
