--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,37 +2,37 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 <web-app>
-	<display-name>Twitter Example application</display-name>
-	
-	<context-param>
-		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-		<param-value>server</param-value>
-	</context-param>
-	<context-param>
-		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>/WEB-INF/faces-config.xml</param-value>
-	</context-param>
+	<display-name>Kundera Graph Browser</display-name>
 
-	
-	<listener>
-		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-	</listener>
+		<context-param>
+			<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+			<param-value>server</param-value>
+		</context-param>
+		<context-param>
+			<param-name>javax.faces.CONFIG_FILES</param-name>
+			<param-value>/WEB-INF/faces-config.xml</param-value>
+		</context-param>
 
-	
-	<!-- Faces Servlet -->
-	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
 
-	<servlet-mapping>
-		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>*.jsf</url-pattern>
-	</servlet-mapping>
+		<listener>
+			<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+		</listener>
 
-	<welcome-file-list>
-		<welcome-file>xhtml/login/login.jsf</welcome-file>
-	</welcome-file-list>
 
-</web-app>
+		<!-- Faces Servlet -->
+		<servlet>
+			<servlet-name>Faces Servlet</servlet-name>
+			<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+			<load-on-startup>1</load-on-startup>
+		</servlet>
+
+		<servlet-mapping>
+			<servlet-name>Faces Servlet</servlet-name>
+			<url-pattern>*.jsf</url-pattern>
+		</servlet-mapping>
+
+		<welcome-file-list>
+			<welcome-file>xhtml/login/login.jsf</welcome-file>
+		</welcome-file-list>
+
+	</web-app>
