--- a/pom.xml
+++ b/pom.xml
@@ -60,21 +60,17 @@
 		<dependency>
 			<groupId>com.impetus.core</groupId>
 			<artifactId>kundera-core</artifactId>
-			<version>2.4-SNAPSHOT</version>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.impetus.client</groupId>
 			<artifactId>kundera-cassandra</artifactId>
-			<version>2.4-SNAPSHOT</version>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.impetus.client</groupId>
-<<<<<<< HEAD
-			<artifactId>kundera-neo4j</artifactId>
-=======
 			<artifactId>kundera-mongo</artifactId>
->>>>>>> 24983200b53bb91c264fc2ddf8493209ab63e65b
-			<version>2.4-SNAPSHOT</version>
+			<version>2.4</version>
 		</dependency>
 
 		<!-- Neo4J Libraries -->
